--- a/MSVS_cmake_gmake/UserLibraryClient/CMakeLists.txt
+++ b/MSVS_cmake_gmake/UserLibraryClient/CMakeLists.txt
@@ -2,4 +2,6 @@ set(SOURCES source/UserLibraryClient.cpp)
 add_executable(UserLibraryClient ${SOURCES})
 target_include_directories(UserLibraryClient PRIVATE include)
 target_include_directories(UserLibraryClient PRIVATE ../UserLibrary/include)
+target_include_directories(UserLibraryClient PRIVATE ../UserLibrary2/include)
 target_link_libraries(UserLibraryClient UserLibrary)
+target_link_libraries(UserLibraryClient UserLibrary2)
