--- a/MSVS_cmake_gmake/CMakeLists.txt
+++ b/MSVS_cmake_gmake/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.22.0)
 project(MSVS_cmake_gmake)
 add_subdirectory(UserLibrary)
+add_subdirectory(UserLibrary2)
 add_subdirectory(UserLibraryClient)
